...

      {activeDispute && (
        <DisputedRow>
          <Description style={{ marginTop: 0 }}>
            This game has been
          </Description>
          <LinkText testID="game-approval-disputed-link" onPress={openDispute}>
            {" "}
            disputed
          </LinkText>
        </DisputedRow>
      )}

...
  onClose: () => void;
  loading: boolean;
  children: ReactNode;
}) => (
  <Modal transparent visible={visible} animationType="slide">
    <ModalContainer>
      <ModalContent testID="game-approval-modal">
        {loading ? (
          <ActivityIndicator size="large" color="#fff" />
        ) : (
          <>
            <CloseButton onPress={onClose}>
              <AntDesign name="close-circle" size={30} color="red" />
...
  declineDisabled: boolean;
  acceptDisabled: boolean;
  submitting: boolean;
}) => (
  <ButtonRow>
    <Button
      testID="game-approval-decline"
      variant="decline"
      disabled={declineDisabled}
      onPress={onDecline}
    >
      <ButtonText>Decline</ButtonText>
    </Button>
    <Button
      testID="game-approval-accept"
      disabled={acceptDisabled}
      onPress={onAccept}
    >
      {submitting ? (
        <ActivityIndicator size="small" color="white" />
      ) : (
...
